# pythra

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_script.sh  pyproject.toml  setup.py
docs/: spanish.md
documentation/: spanish.md  tagalog.md  template.md
examples/los ejemplos/ejemplo de proyecto/: __pythraconfig__.json  __pythraconfig__.jsonc  comenzar.puta
examples/mga halimbawa/halimbawa ng proyekto/: __pythraconfig__.jsonc
los ejemplos/: hola_mundo.pes
los ejemplos/ejemplo de proyecto/el_paquete/: la_herramienta.pes  la_persona.puta
mga halimbawa/halimbawa ng proyekto/kaha/: kagamitan.ptg
mga_halimbawa/: kumusta_mundo.ptg  pangalan.ptg
mga_halimbawa/halimbawa_ng_proyekto/: simula.puta
mga_halimbawa/halimbawa_ng_proyekto/kaha/: kagamitan.ptg  kondisyon.puta  kumusta.puta  tao.puta
src/: compiler.py  language.py  main.py  translator.py  util.py
src/constants/: language-extension-mapping.json  pythra-config.default.json  pythra-config.default.jsonc  splitters.json
src/language_models/spanish/: data.json  data.jsonc
src/language_models/tagalog/: data.json  data.jsonc
tests/: __pythraconfig__.json  test_translate.py
