[project]
name = "pythra"
version = "0.1.0-beta.2"
authors = [
  { name="johndev4", email="mail@johndev4.com" },
]
description = "Translate python keywords in any language to English equivalent"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft Windows 10",
]
dependencies = [
    "typer==0.7.0"
]

[project.scripts]
pythra = "main:initApp"